istio-secure-demo/gatekeeper/constrainttemplates/restrict-pod-privileges/restrict-pod-privileges.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  annotations:
    description: Verify sidecar egress hosts and traffic policy mode
  name: srestrictpodprivileges
spec:
  crd:
    spec:
      names:
        kind: SidecarHostsAndTrafficPolicy
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |-
      package k8spodprivileges

      violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          container := input.review.object.spec.containers[_]
          container.securityContext.privileged
          msg := sprintf("Privileged container is not allowed: %v, securityContext: %v", [container.name, container.securityContext])
      }

      violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          container := input.review.object.spec.containers[_]
          container.securityContext.privileged
          msg := sprintf("Privileged container is not allowed: %v, securityContext: %v", [container.name, container.securityContext])
      }
